--- a/code/assets/style/non-veg.style.css
+++ b/code/assets/style/non-veg.style.css
@@ -9,7 +9,7 @@
     
     padding: 40px;
     font-size: large;
-    font-family: comic Sans Ms;
+    font-family: comic;
     line-height: 1.6;
     
 }
@@ -26,7 +26,7 @@
     bottom: 300;
     margin-left: 250px;
     margin-top: 80px;
-    font-family: Comic Sans MS;
+    font-family: Comic;
     font-size: xx-large;
 }
 body{
