--- a/assets/style/non-veg.style.css
+++ b/assets/style/non-veg.style.css
@@ -4,18 +4,12 @@
     justify-content: center;
     line-height: 20px;
     margin-left: -25px;
+    flex-wrap: wrap;
 }
-.about{
-    
-    padding: 70px;
-    font-size: large;
-    font-family: comic Sans Ms;
-    line-height: 1.6;
-    
-}
+
 .header-image {
     width: 100%;
-    height: 600px;
+    height: 800px;
     display: flex;
     
 }
@@ -34,7 +28,31 @@ background-color: #d8e1cc;
 }
 img{
     cursor: pointer;
+
 }
+.recipe1{
+    border: none;
+       padding-bottom: 30px; 
+    
+   }
+   .about{
+       
+       padding-left: 80px;
+       padding-right: 40px;
+       padding-bottom: 20px;
+       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+       font-size: large;
+       font-family: Comic Sans MS ;
+       line-height: 2.4;
+      text-align: center;
+      height: 280px;
+      width: 500px;
+       border-radius: px;
+       transition: transform .1s;
+   }
+   .about:hover{
+       transform: scale(1.1); 
+   }
 .login-btn {
     display: inline;
     float: right;
@@ -175,7 +193,7 @@ font-weight: bolder;
     
     }
     .recipe1:hover{
-        transform: scale(1.2); 
+        transform: scale(1.1); 
     }
     .signin {
         display: inline;
