--- a/assets/style/index.style.css
+++ b/assets/style/index.style.css
@@ -1,8 +1,11 @@
+/* headerimage */
 .header-image {
     width: 100%;
     height: 650px;
+    
+    
 }
-
+/* login-btn */
 .login-btn {
     display: inline;
     float: right;
@@ -17,6 +20,7 @@
     font-weight: bolder;
     font-family: Comic Sans Ms;
 }
+/* sign-btn */
 .signin {
     display: inline;
     float: right;
@@ -32,7 +36,7 @@
     font-family: Comic Sans Ms;
     margin-right: 20px;
 }
-
+/* veg-btn */
 .veg-recipe {
     display: inline;
     float: right;
@@ -49,7 +53,7 @@
     font-family: Comic Sans Ms;
 }
 
-
+/* non-btn */
 .non-veg {
     display: inline;
     float: right;
@@ -65,7 +69,7 @@
     font-weight: bolder;
     font-family: Comic Sans Ms;
 }
-
+/* snack-btn */
 .snacks {
     display: inline;
     float: right;
@@ -82,17 +86,6 @@
     font-family: Comic Sans Ms;
 }
 
-/* .recipe-btn {
-
-    width: 100px;
-    border: none;
-    border-radius: 20px;
-    height: 50px;
-    float: right;
-    right: 10px;
-    position: relative;
-    display: block;
-} */
 
 
 
@@ -103,33 +96,43 @@
     margin-top: -6p
 }
 
-.slogan {
-    position: relative;
-    color: #08490d;
-    bottom: 300;
-    margin-left: 450px;
-    margin-top: -13px;
-    font-family: Comic Sans MS;
-    font-size: xx-large;
-}
+
 .recipe{
     display: flex;
     margin-top: 20px;
     justify-content: center;
     line-height: 20px;
     margin-left: -25px;
-    
+    flex-wrap: wrap;
 
 }
+.recipe1{
+ border: none;
+    padding-bottom: 30px; 
+ 
+}
+/* recipeabout */
 .about{
     
-    padding: 70px;
+    padding-left: 80px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     font-size: large;
     font-family: Comic Sans MS ;
-    line-height: 1.9;
-   
-    
+    line-height: 2.4;
+   text-align: center;
+   height: 280px;
+   width: 500px;
+    border-radius: px;
+    transition: transform .1s;
+    flex-wrap: wrap;
 }
+
+.about:hover{
+    transform: scale(1.1); 
+}
+
 body{
     background-color: #d8e1cc;
     
@@ -137,9 +140,12 @@ body{
 h2{
     font-weight: lighter;
     font-size: x-large;
+    text-align: center;
+    text-shadow: 2px;
 }
 img{
     cursor: pointer;
+
 }
 .header{
     align-items: center;
@@ -219,9 +225,36 @@ width: 50px;
     padding-left:10px ;
 }
 .recipe1{
-    transition: transform .2s;
+    transition: transform .1s;
 
 }
 .recipe1:hover{
-    transform: scale(1.2); 
+    transform: scale(1.1); 
+}
+.all_recipe{
+   
+display:block;
+}
+
+@media screen and (max-width:600px) {
+
+    .all_recipe {
+        display: none;
+       flex-wrap: wrap; 
+       align-items: center;
+       font-size: 10px;
+       font-weight: 25px;
+       line-height: normal;
+       color: red;
+       
+    }
+    .recipe {
+        display: flex;
+        margin-top: 20px;
+        justify-content: center;
+        line-height: 20px;
+        margin-left: -25px;
+        height:500px;
+    
+    }
 }
