--- a/assets/style/page5.style.css
+++ b/assets/style/page5.style.css
@@ -5,35 +5,58 @@
 
 h1{
     margin: auto;
-    width: 865px;
+    text-align: center;
+    font-family: Comic Sans Ms;
+    font-size: xx-large;
+    font-weight: bolder;
+    padding-top: 50px;
+    margin-right: 50px;
 }
 .ingredients{
     font-weight: bolder;
     margin: auto;
-    width: 30%;
-    margin-top: 20px;
+    margin-left: 280px;
+    padding-top: 40px;
+    font-family: Comic Sans Ms;
+line-height: 1.8;
+position: relative;
+    top: 138;
+    
 }
+
+
 .checklist{
     margin: auto;
-    width: 617px;
-    margin-top: 10px
+   margin-left: 214px;
+    margin-top: -70px;
+    font-family: Comic Sans Ms;
+    font-size: x-large;
+    font-weight: bolder;
+    line-height: 1.2;
+    padding-top: 40px;
+    position: relative;
+    top: 126;
 }
 
 .steps{
     margin: auto;
-    width: 539px;
-    margin-top: 20px
+    margin-left: 850px;
+    position: relative;
+ font-family: Comic Sans Ms;
+ bottom: 300px;
+ font-size: x-large;
+ font-weight: bold;  
  
-    
 }
 .method{
     font-weight: bolder;
     margin: auto;
-    width: 30%;
+    position: relative;
     margin-top: 19px;
-    
-    
-   
+    line-height: 2.5;
+    font-family: Comic Sans Ms;
+   bottom: 280px;
+   margin-left: 900px
 }
     
 
@@ -41,3 +64,40 @@ h1{
     padding-left: 100px;
 }
 
+.image{
+    display:flex;
+    cursor: pointer;
+    object-fit: cover;
+    width: 100%;
+    height: 600px;
+    
+   
+}
+body{
+    background-color: #dfebcc;
+}
+.write{
+    width: 700px;
+    height: 500px;
+   margin-left: 400px;
+   margin-top: 190px;
+}
+.video{
+    position: relative;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: Comic Sans Ms;
+    font-size: x-large;
+    font-weight: bold;
+    bottom: 240px;
+}
+.videos{
+    margin-left: 350px;
+    position: relative;
+    bottom: 230px;
+
+}
+form{
+    line-height: 2.8;
+}
