--- a/assets/style/snacks.style.css
+++ b/assets/style/snacks.style.css
@@ -9,14 +9,31 @@
     justify-content: center;
     line-height: 20px;
     margin-left: -25px;
+    flex-wrap: wrap;
+}
+.recipe1{
+    border: none;
+       padding-bottom: 30px; 
+    
+   }
+
+.about{
+    
+    padding-left: 80px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    font-size: large;
+    font-family: Comic Sans MS ;
+    line-height: 2.4;
+   text-align: center;
+   height: 280px;
+   width: 500px;
+   transition: transform .1s; 
 }
 
-.about {
-
-    padding: 70px;
-    font-size: large;
-    font-family: comic Sans Ms;
-    line-height: 1.6;
+.about:hover{
+    transform: scale(1.1); 
 }
 
 .slogan {
@@ -195,7 +212,7 @@ footer {
 
 }
 .recipe1:hover{
-    transform: scale(1.2); 
+    transform: scale(1.1); 
 }
 .signin {
     display: inline;
