--- a/assets/style/veg.style.css
+++ b/assets/style/veg.style.css
@@ -1,7 +1,7 @@
 
 .header-image {
     width: 100%;
-    height: 700px;
+    height: 900px;
 }
 .slogan {
     position: relative;
@@ -19,17 +19,35 @@
     justify-content: center;
     line-height: 20px;
     margin-left: -25px;
+    flex-wrap: wrap;
 }
 body{
     background-color: #d8e1cc;
 }
 .about{
     
-    padding: 70px;
+    padding-left: 80px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+transition: transform .1s;
     font-size: large;
-    font-family: comic Sans Ms;
-    line-height: 1.6;
+    font-family: Comic Sans MS ;
+    line-height: 2.4;
+   text-align: center;
+   height: 280px;
+   width: 500px;
+   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); 
+ 
 }
+.about:hover{
+    transform: scale(1.1); 
+}
+.recipe1{
+    border: none;
+      
+    padding-bottom: 30px; 
+    
+   }
 .login-btn {
     display: inline;
     float: right;
@@ -189,4 +207,4 @@ font-weight: bolder;
         font-family: Comic Sans Ms;
         margin-right: 20px;
     }
-    
+   
