--- a/assets/style/index.style.css
+++ b/assets/style/index.style.css
@@ -112,11 +112,13 @@
 .recipe1{
  border: none;
     padding-bottom: 30px; 
+     margin-top: -303px;
+     margin-left: 60px;
  
 }
 /* recipeabout */
 .about{
-    
+    margin-left: 500px;
     padding-left: 80px;
     padding-right: 40px;
     padding-bottom: 20px;
