--- a/assets/style/addrecipe.css
+++ b/assets/style/addrecipe.css
@@ -20,6 +20,7 @@
   .contact-form form {
     display: flex;
     flex-direction: column;
+    
   }
   
   .contact-form label {
@@ -54,6 +55,7 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 22px;
   }
   
   .contact-form button[type="submit"]:hover {
