chore: worked in recipe module

--- a/assets/style/addrecipe.css
+++ b/assets/style/addrecipe.css
@@ -7,6 +7,9 @@
   .contact-form label {
     color: black;
   }
+  .recipe_id{
+    background-color: white;
+  }
   
   .contact-form .heading {
     font-size: 24px;
