--- a/assets/style/index.style.css
+++ b/assets/style/index.style.css
@@ -267,3 +267,18 @@ display:block;
     
     }
 }
+
+.edit{
+   width: 100px;
+   height: 50px;
+   background-color:#184e26;
+  margin-right: 40px;
+   /* margin-left: px; */
+   display: inline;
+}
+.deleteBtn{
+    width: 100px;
+   height: 50px;
+   background-color: #184e26;
+   display: inline;
+}
