--- a/assets/style/log.css
+++ b/assets/style/log.css
@@ -30,7 +30,7 @@
     margin-bottom: 5px;
   }
   
-  input[type="text"], input[type="password"] {
+  input[type="email"], input[type="password"] {
     width: 100%;
     padding: 12px 20px;
     font-size: 16px;
