--- a/assets/style/index.style.css
+++ b/assets/style/index.style.css
@@ -274,11 +274,16 @@ display:block;
    background-color:#184e26;
   margin-right: 40px;
    /* margin-left: px; */
+  
    display: inline;
 }
 .deleteBtn{
     width: 100px;
    height: 50px;
    background-color: #184e26;
+   
    display: inline;
+}
+a{
+    text-decoration: none;
 }
