--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -34,7 +34,9 @@
     color: white;
     font-weight: bolder;
     font-family: Comic Sans Ms;
-    margin-right: 20px;
+    margin-right: 30px;
+    margin-top: 15px;
+  
 }
 /* veg-btn */
 .veg-recipe {
@@ -45,12 +47,13 @@
     border: none;
     border-radius: 20px;
     height: 50px;
-    margin-right: 20px;
+    margin-right: -6px;
     cursor: pointer;
     background-color: #184e26;
     color: white;
     font-weight: bolder;
     font-family: Comic Sans Ms;
+    margin-top: 15px;
 }
 
 /* non-btn */
@@ -69,6 +72,7 @@
     font-weight: bolder;
     font-family: Comic Sans Ms;
     margin-left: 20px;
+    margin-top: 15px;
 }
 /* snack-btn */
 .snacks {
@@ -86,6 +90,7 @@
     font-weight:bolder;
     font-family: Comic Sans Ms;
     margin-right: 6px;
+    margin-top: 15px;
 }
 
 
@@ -102,40 +107,33 @@
 
 .recipe{
     display: flex;
-    margin-top: 20px;
-    justify-content: center;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: fit-content;
+    justify-content: space-evenly;
+    align-items: center;
     line-height: 20px;
-    margin-left: -25px;
     flex-wrap: wrap;
-    margin-left: 437px;
+    gap: 30px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-.recipe1{
-    height: 300px;
-    width: 500px;
-    
- border: none;
-    padding-bottom: 30px; 
- margin-top: -297px;;
- margin-left: 242px;
- 
+.recipe-title{
+    font-weight: 700;
+    font-size: 40px;
+    margin: 0 auto;
 }
+
 /* recipeabout */
 .about{
     
-    padding-left: 80px;
-    padding-right: 40px;
-    padding-bottom: 20px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     font-size: large;
     font-family: Comic Sans MS ;
     line-height: 2.4;
-   text-align: center;
-   height: 280px;
-   width: 500px;
+    min-width: 300px;
+    max-width: 500px;
+    text-align: center;
     border-radius: px;
     transition: transform .1s;
-    flex-wrap: wrap;
-    margin-left: 189px;
 }
 
 .about:hover{
@@ -286,4 +284,12 @@ display:block;
 }
 a{
     text-decoration: none;
+}
+.by{
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 147px;
+}
+.head{
+    border-style: groove;
 }
