--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -91,6 +91,7 @@
     font-family: Comic Sans Ms;
     margin-right: 6px;
     margin-top: 15px;
+    margin-left: 50px;
 }
 
 
@@ -231,13 +232,13 @@ width: 50px;
     
     padding-left:10px ;
 }
-.recipe1{
+/* .recipe1{
     /* transition: transform .1s; */
 
-}
-.recipe1:hover{
-    /* transform: scale(1.1);  */
-}
+
+/* .recipe1:hover{
+    transform: scale(1.1); 
+} */ 
 .all_recipe{
    
 display:block;
@@ -292,4 +293,53 @@ a{
 }
 .head{
     border-style: groove;
+}
+footer {
+    background-color: #f2f2f2;
+    padding: 50px 0;
+    margin-top: 20px;
+
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .col-md-6 {
+    width: 50%;
+    padding: 0 20px;
+  }
+  
+  h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  a {
+    color: #333;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #777;
+  }
+  body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
