--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -136,11 +136,6 @@
     border-radius: px;
     transition: transform .1s;
 }
-
-.about:hover{
-    /* transform: scale(1.1);  */
-}
-
 body{
     background-color: #d8e1cc;
     
@@ -342,4 +337,7 @@ footer {
   }
   body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.editBtn{
+    margin-top: 30px;
 }
