--- a/assets/style/profile.css
+++ b/assets/style/profile.css
@@ -1,30 +1,38 @@
 form-group {
-    margin-bottom: 1rem;
-    margin-top: 20px;
-    justify-content: center;
+  margin-bottom: 1rem;
+  margin-top: 20px;
+  justify-content: center;
 }
-  
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input, textarea {
-    padding: 0.5rem;
-    width: 600px;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid gray;
 
-  }
-  
-  button {
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-  }
-  
+label {
+  font-weight: bold;
+}
+
+input,textarea {
+  padding: 0.5rem;
+  width: 600px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+button {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  justify-content: center;
+  display: grid;
+}
+.form-group {
+  justify-content: center;
+  display: grid;
+}
+.btn {
+  margin-left: 430px;
+  display: inline;
+
+}
