--- a/assets/style/page4.style.css
+++ b/assets/style/page4.style.css
@@ -162,3 +162,34 @@ margin-left: 563px;
     height: 40px;
   }
   
+  #edit{
+    margin-top: 15px;
+    display: inline;
+    float: right;
+    margin-bottom: 30px;
+    width: 100px;
+    border: none;
+    border-radius: 20px;
+    height: 50px;
+    cursor: pointer;
+    background-color:  #184e26;
+    color: white;
+    font-weight: bolder;
+    font-family: Comic Sans Ms;
+  }
+  #delete{
+    display: inline;
+    float: right;
+    margin-bottom: 30px;
+    width: 100px;
+    border: none;
+    border-radius: 20px;
+    height: 50px;
+    cursor: pointer;
+    background-color:  #184e26;
+    color: white;
+    font-weight: bolder;
+    font-family: Comic Sans Ms;
+    margin-right: 30px;
+    margin-top: 15px;
+  }
