--- a/assets/style/page4.style.css
+++ b/assets/style/page4.style.css
@@ -9,12 +9,15 @@ h1{
 }
 body{
     background-color: #d5eab5;
+    overflow-x: hidden;
 }
 .image{
     display: block;
-    object-fit: cover;
-    width: 100%;
+    object-fit: contain;
+    margin-left: 100px;
+    margin-top: 20px;
     height: 500px;
+
 }
 @media screen and (max-width:600px){
     .steps{
@@ -27,8 +30,9 @@ margin-bottom: 20px;
 .Ingredients{
 margin-left: 188px;
 margin-top: 70px;
-
+margin-top: 20px;
 }
+
 .steps{
 margin-left: 188px;
 margin-top: 42px;
@@ -39,10 +43,11 @@ margin-left: 60px
 }
 .step{
     line-height: 1.8;
-    margin-left: 60px
+    margin-left: 60px;
+    width: 561px
 }
 body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-family: Comic Sans Ms;
 }
 .comment {
     width: 40%;
@@ -125,8 +130,9 @@ body{
     outline-style: solid;
   } */
   .comment-card {
-    display: flex;
-    align-items: center;
+    position: absolute;
+    top: 277px;
+    right: 26px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
@@ -136,7 +142,7 @@ body{
     width: 560px;
 margin-left: 563px;
 }
-  
+
 .textarea{
   height: 800px;
   width: 1000px;
@@ -162,24 +168,10 @@ margin-left: 563px;
     height: 40px;
   }
   
-  #edit{
-    margin-top: 15px;
-    display: inline;
-    float: right;
-    margin-bottom: 30px;
-    width: 100px;
-    border: none;
-    border-radius: 20px;
-    height: 50px;
-    cursor: pointer;
-    background-color:  #184e26;
-    color: white;
-    font-weight: bolder;
-    font-family: Comic Sans Ms;
-  }
+  
   #delete{
     display: inline;
-    float: right;
+    margin-left: 648px;
     margin-bottom: 30px;
     width: 100px;
     border: none;
@@ -193,3 +185,10 @@ margin-left: 563px;
     margin-right: 30px;
     margin-top: 15px;
   }
+  #com{
+    float: right;
+    position: absolute;
+    top: 7px;
+    right: -273px;
+    font-size: 18px;
+}
