--- a/assets/style/detail.css
+++ b/assets/style/detail.css
@@ -8,7 +8,7 @@ h1{
     font-family: Comic Sans Ms;
 }
 body{
-    background-color: #d5eab5;
+    background-color:  #d8e1cc;;
     overflow-x: hidden;
 }
 .image{
@@ -167,9 +167,15 @@ margin-left: 563px;
   #Varities{
     height: 40px;
   }
-  
-  
-  #delete{
+  /* #delete button{
+    width:300px;
+    height:100px;
+  } */
+  #edit{
+    border: 1px solid black;
+  }
+  #delete,
+  #edit{
     display: inline;
     margin-left: 648px;
     margin-bottom: 30px;
