chore: debuging the sonarcloud

--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -94,15 +94,10 @@
     margin-left: 50px;
 }
 
-
-
-
-
-
 .menu {
     height: 16px;
     margin-left: -5px;
-    margin-top: -6p
+    margin-top: -6pX;
 }
 
 
