--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -6,7 +6,7 @@
     overflow: hidden;
     margin: 10px;
     font-size: large;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
     margin-left: 590px;
     margin-top: 200px;
   }
