--- a/assets/style/profile.css
+++ b/assets/style/profile.css
@@ -44,6 +44,6 @@ button:hover{
   margin-top: 229px;
 }
 body{
-  font-family: Comic Sans Ms;
+  font-family: "Comic Sans MS";
   background-color:  #d8e1cc;;
 }
