--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -18,7 +18,7 @@
     background-color:  #184e26;
     color: white;
     font-weight: bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
 }
 /* sign-btn */
 .signin {
@@ -33,7 +33,7 @@
     background-color:  #184e26;
     color: white;
     font-weight: bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
     margin-right: 30px;
     margin-top: 15px;
   
@@ -52,7 +52,7 @@
     background-color: #184e26;
     color: white;
     font-weight: bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
     margin-top: 15px;
 }
 
@@ -70,7 +70,7 @@
     background-color: #184e26;
     color: white;
     font-weight: bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
     margin-left: 20px;
     margin-top: 15px;
 }
@@ -88,7 +88,7 @@
     background-color: #184e26;
     color: white;
     font-weight:bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
     margin-right: 6px;
     margin-top: 15px;
     margin-left: 50px;
@@ -123,7 +123,7 @@
 .about{
     
     font-size: large;
-     font-family: Comic Sans MS ;
+     font-family: "Comic Sans MS" ;
     line-height: 2.4;
     min-width: 300px;
     max-width: 500px;
@@ -155,7 +155,7 @@ img{
 h1{
     color:#04240d;
     font-size: x-large;
-    font-family: Comic Sans Ms ;
+    font-family: "Comic Sans MS" ;
 font-weight: bolder;
 }
 .header{
@@ -258,8 +258,7 @@ display:block;
 }
 
 .edit{
-   width: 100px;
-   height: 50px;
+   
    background-color:#184e26;
   margin-right: 40px;
    /* margin-left: px; */
