--- a/assets/style/log.css
+++ b/assets/style/log.css
@@ -7,7 +7,7 @@
     background-color: #e8e8e8;
     box-shadow: 2px 2px 10px #ccc;
     margin-top: 200px;
-    font-family: Comic Sans ms;
+    font-family: "Comic Sans MS";
   }
   
   .card-header {
