--- a/assets/style/veg.style.css
+++ b/assets/style/veg.style.css
@@ -9,7 +9,7 @@
     bottom: 300;
     margin-left: 250px;
     margin-top: -69px;
-    font-family: Comic Sans MS;
+    font-family:"Comic Sans MS";
     font-size: xx-large;
     font-weight: bolder;
 }
@@ -61,7 +61,7 @@ transition: transform .1s;
     color: white;
     
     font-weight:bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
 }
 
 .veg-recipe {
@@ -77,7 +77,7 @@ transition: transform .1s;
     background-color: #184e26;
     color: white;
     font-weight:bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
 }
 
 
@@ -94,7 +94,7 @@ transition: transform .1s;
     background-color: #184e26;
     color: white;
     font-weight:bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
 }
 
 .snacks {
@@ -110,7 +110,7 @@ transition: transform .1s;
     background-color: #184e26;
     color: white;
     font-weight:bolder;
-    font-family: Comic Sans Ms;
+    font-family: "Comic Sans MS";
 }
 .logo{
     border-radius: 25px;
@@ -118,7 +118,7 @@ transition: transform .1s;
 h1{
     color:#04240d;
     font-size: x-large;
-    font-family: Comic Sans Ms ;
+    font-family: "Comic Sans MS" ;
 font-weight: bolder;
 }
 .header{
@@ -204,7 +204,7 @@ font-weight: bolder;
         background-color:  #184e26;
         color: white;
         font-weight: bolder;
-        font-family: Comic Sans Ms;
+        font-family: "Comic Sans MS";
         margin-right: 20px;
     }
    
