--- a/assets/style/detail.css
+++ b/assets/style/detail.css
@@ -8,7 +8,7 @@ h1{
    
 }
 body{
-    background-color:  #d8e1cc;;
+    background-color:  #d8e1cc;
     overflow-x: hidden;
 }
 .image{
@@ -76,53 +76,7 @@ margin-left: 60px
     width: 40%;
     height: 700px;
   }
-  
-  footer {
-    background-color: #f2f2f2;
-    padding: 50px 0;
-    margin-top: 20px;
-
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .col-md-6 {
-    width: 50%;
-    padding: 0 20px;
-  }
-  
-  h3 {
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  li {
-    margin-bottom: 10px;
-  }
-  
-  a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: #777;
-  }
+ 
   /* .whole-content{
     outline-style: solid;
   } */
