--- a/assets/style/detail.css
+++ b/assets/style/detail.css
@@ -12,12 +12,12 @@ body{
     overflow-x: hidden;
 }
 .image{
-    display: block;
-    object-fit: contain;
-    margin-left: 100px;
+    /* display: block;
+    object-fit: contain; */
+    margin-left: -3px;
     margin-top: 20px;
     height: 500px;
-
+width: 750px;
 }
 @media screen and (max-width:600px){
     .steps{
@@ -141,10 +141,17 @@ margin-left: 563px;
     margin-right: 30px;
     margin-top: 15px;
   }
-  #com{
+  /* #com{
     float: right;
     position: absolute;
     top: 7px;
     right: -273px;
     font-size: 18px;
+} */
+
+.recipe-details{
+  margin: auto;
+  width: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
