--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -52,9 +52,9 @@
     background-color: #184e26;
     color: white;
     font-weight: bolder;
-    
-    margin-top: 15px;
+    margin-top: 4px;
 }
+
 
 /* non-btn */
 .non-veg {
@@ -72,7 +72,7 @@
     font-weight: bolder;
     
     margin-left: 20px;
-    margin-top: 15px;
+    margin-top: 3px;
 }
 /* snack-btn */
 .snacks {
@@ -88,7 +88,7 @@
     background-color: #184e26;
     color: white;
     font-weight:bolder;
-    margin-top: 15px;
+    margin-top: 4px;
     margin-left: 50px;
 }
 
@@ -100,6 +100,7 @@
 
 
 .recipe{
+    
     display: flex;
     margin: 20px auto;
     padding: 20px;
@@ -111,11 +112,11 @@
     gap: 30px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-.recipe-title{
+/* .recipe-title{
     font-weight: 700;
     font-size: 40px;
     margin: 0 auto;
-}
+} */
 
 /* recipeabout */
 .about{
@@ -126,8 +127,7 @@
     min-width: 300px;
     max-width: 500px;
     text-align: center;
-    border-radius: px;
-    transition: transform .1s;
+    
 }
 h2{
     font-weight: lighter;
@@ -216,8 +216,19 @@ a{
 }
 
   body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #d8e1cc;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .editBtn{
     margin-top: 30px;
+}
+#cars{
+    display: inline;
+    float: right;
+    margin-bottom: -62px;
+    margin-top: 2px;
+    width: 100px;
+    height: 48px;
+    background-color: #254e25;
+    color: white;
 }
