--- a/assets/style/detail.css
+++ b/assets/style/detail.css
@@ -10,15 +10,15 @@ h1{
 body{
     background-color:  #d8e1cc;
     overflow-x: hidden;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.image{
-    /* display: block;
-    object-fit: contain; */
-    margin-left: -3px;
-    margin-top: 20px;
-    height: 500px;
-width: 750px;
-}
+ .image{
+  width: 750px;
+  height: 300px;
+  object-fit: cover;
+  object-position: 10% 50%;
+ }
+
 @media screen and (max-width:600px){
     .steps{
         line-height: normal;
@@ -44,7 +44,7 @@ margin-left: 60px
 .step{
     line-height: 1.8;
     margin-left: 60px;
-    width: 561px
+    width: fit-content;
 }
 .comment {
     width: 40%;
@@ -82,7 +82,7 @@ margin-left: 60px
   } */
   .comment-card {
     position: absolute;
-    top: 277px;
+    top: 487px;
     right: 26px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -124,22 +124,15 @@ margin-left: 563px;
   } */
   #edit{
     border: 1px solid black;
+    background-color: rgb(22, 80, 22);
+    color: #fff;
+
   }
   #delete{
-    display: inline;
-    margin-left: 648px;
-    margin-bottom: 30px;
-    width: 100px;
-    border: none;
-    border-radius: 20px;
-    height: 50px;
-    cursor: pointer;
-    background-color:  #184e26;
-    color: white;
-    font-weight: bolder;
-    
-    margin-right: 30px;
-    margin-top: 15px;
+    border: 1px solid black;
+    margin-left: 20px;
+    background-color: rgb(22, 80, 22);
+    color: #fff;
   }
   /* #com{
     float: right;
@@ -154,4 +147,14 @@ margin-left: 563px;
   width: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   padding: 10px;
+  margin-right: 657px;
+}
+.comment-section{
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  height: fit-content;
+  width: fit-content;
+  position: relative;
+  bottom: 1140px;
+    left: 967px;
 }
