--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -97,8 +97,17 @@
     margin-left: -5px;
     margin-top: -6pX;
 }
+.recipe-img {
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
 
-
+}
+.all-recipe{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 .recipe{
     
     display: flex;
@@ -108,7 +117,7 @@
     justify-content: space-evenly;
     align-items: center;
     line-height: 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 30px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
@@ -122,7 +131,7 @@
 .about{
     
     font-size: large;
-     
+    width: 414px;
     line-height: 2.4;
     min-width: 300px;
     max-width: 500px;
@@ -161,6 +170,8 @@ font-weight: bolder;
     transform: scale(1.1); 
 } */ 
 .all_recipe{
+    display:grid;
+    grid-template-columns: auto;
    
 display:block;
 }
@@ -211,9 +222,9 @@ a{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: 147px;
 }
-.head{
+/* .head{
     border-style: groove;
-}
+} */
 
   body{
     background-color: #d8e1cc;
